--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "bangumi-search",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "a wrapper for bangumi-data",
   "main": "./dist/main.js",
+  "bin": {
+    "bangumi-search": "./index.js"
+  },
   "files": [
     "dist/*",
-    "*.json"
+    "*.json",
+    "*.js"
   ],
   "scripts": {
     "build": "webpack --config webpack.config.js"
@@ -17,9 +21,6 @@
   ],
   "author": "DCsunset",
   "license": "MIT",
-  "bin": {
-    "bangumi-search": "./index.js"
-  },
   "dependencies": {
     "bangumi-data": "^0.3.13",
     "lodash": "^4.17.15",
